<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">v2rayNG</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to activate VPN</string>

    <!-- Notifications -->
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="notification_action_more">click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>

    <!--ServerActivity-->
    <string name="title_server">Server</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_manually">Type manually</string>
    <string name="menu_item_import_config_custom_local">Import custom config from locally</string>
    <string name="menu_item_import_config_custom_url">Import custom config from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Import custom config scan URL</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">network</string>
    <string name="server_lab_more_function">more function</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_request_host">request host/ws path/ws(path;host)</string>
    <string name="server_lab_stream_security">tls</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a Config File</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize Config</string>
    <string name="toast_config_file_invalid">Invalid Config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>

    <!-- PerAppProxyActivity -->
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>


    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_advanced">Advanced Settings</string>

    <string name="title_pref_bypass_mainland">Bypass mainland</string>
    <string name="summary_pref_bypass_mainland">Bypass mainland</string>

    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">Per-app proxy mode only support Android 5.0 Lollipop or higher</string>

    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Enable maybe speed up network and switch network maybe flash</string>

    <string name="title_pref_donate">Donate</string>
    <string name="summary_pref_donate">Donate developer</string>
    <string name="donate_detail">Add some experimental advanced features</string>

    <string name="title_pref_remote_dns">Remote DNS</string>
    <string name="summary_pref_remote_dns">Remote DNS</string>

    <string name="title_pref_feedback">Feedback</string>
    <string name="summary_pref_feedback">Feedback enhancements or bugs to GitHub</string>

    <string name="title_pref_version">Version</string>

    <string name="donate_error_setup">Error Setup:</string>
    <string name="donate_error_inventory">Error querying inventory</string>
    <string name="donate_error_purchase1">Error Purchase:</string>
    <string name="donate_error_purchase2">Error Purchase,Authenticity verification failed.</string>
    <string name="donate_success_purchase">Thank you for your donation!</string>
    <string name="donate_item_click">Donate</string>

    <string name="title_logcat">Logcat</string>
    <string name="logcat_copy">Copy</string>

    <string name="tasker_start_service">Start Service</string>
    <string name="tasker_setting_confirm">Confirm</string>

    <string-array name="share_method">
        <item>QRcode</item>
        <item>Export to clipboard</item>
    </string-array>
    <string name="open_google">open Google</string>
    <string name="login_title">Server subscribe</string>
    <string name="login_username">subscribe address</string>
    <string name="login_passwd">password</string>
    <string name="login_button">Get configuration</string>
    <string name="menu_item_import_config_login">Server subscribe (recommend)</string>
</resources>
